[package]
name = "obscura-image"
version = "0.1.1"
authors = ["Aarni Koskela <akx@iki.fi>"]
edition = "2024"
license = "MIT"
description = "Decode esoteric image formats in the browser using WebAssembly"
repository = "https://github.com/akx/obscura-image"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
tiff = "0.10.0"
png = "0.17.16"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_bytes = "0.11"
anyhow = "1.0"
mrc = { version = "0.1.0", default-features = false, features = ["std"], git = "https://github.com/akx/mrc", branch = "next" }
bytemuck = { version = "1.0", features = ["derive"] }
half = "2.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.77"
features = [
    "console",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
